--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -85,6 +85,11 @@ p {
   @apply shadow-md;
 }
 
+.modal-box {
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
+  border: 1px solid white;
+}
+
 .btn.btn-ghost {
   @apply shadow-none;
 }
