--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -90,6 +90,45 @@ p {
   border: 1px solid white;
 }
 
+.ticket {
+  position: relative;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.36));
+  border: 1px solid white;
+  border-radius: 20px;
+}
+
+.ticket::before,
+.ticket::after {
+  content: "";
+  position: absolute;
+  top: 85px;
+  bottom: 0;
+}
+
+.ticket::before {
+  width: 35px;
+  height: 60px;
+  border-radius: 0 60px 60px 0 / 0 100% 100% 0;
+  background-color: black;
+  border: 1px solid #fff;
+  border-left: 0;
+  left: -1px;
+}
+
+.ticket::after {
+  width: 35px;
+  height: 60px;
+  border-radius: 60px 0 0 60px / 100% 0 0 100%;
+  background-color: black;
+  border: 1px solid #fff;
+  border-right: 0;
+  right: -1px;
+}
+
+.border-image {
+  border-radius: 20px;
+}
+
 .btn.btn-ghost {
   @apply shadow-none;
 }
