--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -94,39 +94,34 @@ p {
   position: relative;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.36));
   border: 1px solid white;
-  border-radius: 20px;
 }
 
 .ticket::before,
 .ticket::after {
   content: "";
   position: absolute;
-  top: 85px;
+  top: 35%;
   bottom: 0;
+  width: 4%;
+  height: 27%;
+  background-color: black;
+  border: 1px solid #fff;
 }
 
 .ticket::before {
-  width: 35px;
-  height: 60px;
-  border-radius: 0 60px 60px 0 / 0 100% 100% 0;
-  background-color: black;
-  border: 1px solid #fff;
+  border-radius: 0 140% 140% 0 / 0 100% 100% 0;
   border-left: 0;
   left: -1px;
 }
 
 .ticket::after {
-  width: 35px;
-  height: 60px;
-  border-radius: 60px 0 0 60px / 100% 0 0 100%;
-  background-color: black;
-  border: 1px solid #fff;
+  border-radius: 140% 0 0 140% / 100% 0 0 100%;
   border-right: 0;
   right: -1px;
 }
 
 .border-image {
-  border-radius: 20px;
+  border-radius: 10%;
 }
 
 .btn.btn-ghost {
